--- a/css/main.css
+++ b/css/main.css
@@ -1,1 +1,52 @@
-/*Add your CSS*/
+body, .heigth-container-fluid {
+  height: 100vh;
+}
+
+#main-page {
+  min-height: 100vh;
+}
+
+#google-map {
+  height: 30vh;
+  width: 80vw;
+}
+
+#splash {
+  height: 100vh;
+  width: 100vw;
+  display: absolute;
+}
+
+#main-page {
+  display: none;
+}
+
+.size-thumbnail {
+  height: 10vh;
+  width: 20vw;
+}
+
+.size-thumbnail-2 {
+  height: 20vh;
+  width: 40vw;
+}
+
+header a {
+  color: #FFC107;
+}
+
+a {
+  color: white;
+  font-weight: 600;
+}
+
+a:hover {
+  color: #FFC107;
+  text-decoration: none;
+  font-weight: 700;
+}
+
+/* #title {
+    animation-duration: 2s;
+    animation-iteration-count: 2;
+  } */
